# KuredHorn

./: .dockerignore  .gitignore  Dockerfile  README.md  helmrelease.yaml  pyproject.toml  version.json
.github/workflows/: dockerworkflow.yaml
kuredhorn/: app.py
