[tool.poetry]
name = "kuredhorn"
version = "0.1.0"
description = ""
authors = ["Gui Martins <gmartins@fancywhale.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "^30.1.0"


[tool.poetry.group.dev.dependencies]
monkeytype = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
